@@ -1,22 +1,20 @@
 package com.bakdata.conquery.util.support;
 
 import static org.assertj.core.api.Assertions.assertThat;
-import static org.awaitility.Awaitility.await;
 import static org.junit.jupiter.api.Assertions.fail;
 
 import java.io.File;
-import java.time.Duration;
 import java.util.HashSet;
 import java.util.List;
 import java.util.Map;
 import java.util.Set;
 import java.util.concurrent.ConcurrentHashMap;
 import java.util.concurrent.TimeUnit;
+import java.util.function.Supplier;
 import jakarta.validation.Validator;
 import jakarta.ws.rs.client.Client;
 import jakarta.ws.rs.core.UriBuilder;
 
-import com.bakdata.conquery.Conquery;
 import com.bakdata.conquery.commands.DistributedStandaloneCommand;
 import com.bakdata.conquery.commands.ShardNode;
 import com.bakdata.conquery.commands.StandaloneCommand;
@@ -31,16 +29,16 @@ import com.bakdata.conquery.models.auth.AuthorizationController;
 import com.bakdata.conquery.models.auth.entities.User;
 import com.bakdata.conquery.models.config.ConqueryConfig;
 import com.bakdata.conquery.models.datasets.Dataset;
-import com.bakdata.conquery.models.execution.ExecutionState;
 import com.bakdata.conquery.models.identifiable.ids.specific.DatasetId;
 import com.bakdata.conquery.models.identifiable.ids.specific.UserId;
 import com.bakdata.conquery.models.query.ExecutionManager;
 import com.bakdata.conquery.models.worker.DatasetRegistry;
+import com.bakdata.conquery.models.worker.DistributedNamespace;
 import com.bakdata.conquery.models.worker.Namespace;
 import com.bakdata.conquery.resources.admin.rest.AdminDatasetProcessor;
 import com.bakdata.conquery.resources.admin.rest.AdminProcessor;
 import com.bakdata.conquery.util.io.Cloner;
-import com.google.common.util.concurrent.Uninterruptibles;
+import com.google.common.base.Stopwatch;
 import io.dropwizard.client.JerseyClientBuilder;
 import io.dropwizard.core.cli.Command;
 import io.dropwizard.testing.DropwizardTestSupport;
@@ -61,6 +59,7 @@ public class TestConquery {
 	private static final ConcurrentHashMap<String, Integer> NAME_COUNTS = new ConcurrentHashMap<>();
 	private final File tmpDir;
 	private final ConqueryConfig config;
+	@Getter
 	private final TestDataImporter testDataImporter;
 	private final Set<StandaloneSupport> openSupports = new HashSet<>();
 	@Getter
@@ -97,11 +96,12 @@ public class TestConquery {
 		Namespace ns = datasets.get(datasetId);
 
 		// make tmp subdir and change cfg accordingly
-		File localTmpDir = new File(tmpDir, "tmp_" + name);
+		String safeFileName = name.replaceAll("\\W", "");
+		File localTmpDir = new File(tmpDir, "tmp_" + safeFileName);
 
 		if (!localTmpDir.exists()) {
 			if (!localTmpDir.mkdir()) {
-				throw new IllegalStateException("Could not create directory for Support");
+				throw new IllegalStateException("Could not create directory for Support:" + localTmpDir);
 			}
 		}
 		else {
@@ -116,14 +116,13 @@ public class TestConquery {
 				mode,
 				this,
 				ns,
-				ns.getStorage().getDataset(),
+				ns.getStorage().getDataset().getId(),
 				localTmpDir,
 				localCfg,
 				// Getting the User from AuthorizationConfig
 				testDataImporter
 		);
 
-		support.waitUntilWorkDone();
 		openSupports.add(support);
 		return support;
 	}
@@ -134,10 +133,30 @@ public class TestConquery {
 		ClusterState clusterState = manager.getConnectionManager().getClusterState();
 		assertThat(clusterState.getShardNodes()).hasSize(2);
 
-		await().atMost(10, TimeUnit.SECONDS)
-			   .until(() -> clusterState.getWorkerHandlers().get(datasetId).getWorkers().size() == clusterState.getShardNodes().size());
+		waitUntil(() -> clusterState.getWorkerHandlers().get(datasetId).getWorkers().size() == clusterState.getShardNodes().size());
 
 		return buildSupport(datasetId, name, StandaloneSupport.Mode.WORKER);
+	}
+
+	@SneakyThrows
+	public static void waitUntil(Supplier<Boolean> condition) {
+		Stopwatch stopwatch = Stopwatch.createStarted();
+		int done = 0;
+
+		while (stopwatch.elapsed(TimeUnit.SECONDS) < 10) {
+			Thread.sleep(2);
+			if (!condition.get()) {
+				continue;
+			}
+
+			//sample multiple times from the job queues to make sure we are done with everything and don't miss late arrivals
+			done++;
+			if (done > 5) {
+				return;
+			}
+		}
+
+		throw new IllegalStateException("Jobs did not finish within expected time.");
 	}
 
 	public synchronized StandaloneSupport getSupport(String name) {
@@ -148,12 +167,13 @@ public class TestConquery {
 				name += "[" + count + "]";
 			}
 			Dataset dataset = new Dataset(name);
-			waitUntilWorkDone();
+			dataset.setStorageProvider(getDatasetRegistry());
+
 			LoadingUtil.importDataset(getClient(), defaultAdminURIBuilder(), dataset);
+			waitUntilWorkDone();
 
 			// Little detour here, but this way we get the correctly initialized dataset id
-			DatasetId datasetId = getDatasetRegistry().get(new DatasetId(dataset.getName())).getDataset().getId();
-			waitUntilWorkDone();
+			DatasetId datasetId = getDatasetRegistry().get(dataset.getId()).getDataset().getId();
 
 			return createSupport(datasetId, name);
 		}
@@ -162,27 +182,8 @@ public class TestConquery {
 		}
 	}
 
-	public void waitUntilWorkDone() {
-		log.info("Waiting for jobs to finish");
-		//sample multiple times from the job queues to make sure we are done with everything and don't miss late arrivals
-		long started = System.nanoTime();
-		for (int i = 0; i < 5; i++) {
-			do {
-				Uninterruptibles.sleepUninterruptibly(1, TimeUnit.MILLISECONDS);
-
-				if (!isBusy()) {
-					break;
-				}
-
-
-				if (Duration.ofNanos(System.nanoTime() - started).toSeconds() > 10) {
-					started = System.nanoTime();
-					log.warn("waiting for done work for a long time", new Exception());
-				}
-
-			} while (true);
-		}
-		log.trace("all jobs finished");
+	public DatasetRegistry<?> getDatasetRegistry() {
+		return getStandaloneCommand().getManagerNode().getDatasetRegistry();
 	}
 
 	public UriBuilder defaultAdminURIBuilder() {
@@ -192,21 +193,26 @@ public class TestConquery {
 						 .port(dropwizard.getAdminPort());
 	}
 
-	public DatasetRegistry<?> getDatasetRegistry() {
-		return getStandaloneCommand().getManagerNode().getDatasetRegistry();
+	@SneakyThrows
+	public void waitUntilWorkDone() {
+		log.trace("Waiting for jobs to finish");
+		waitUntil(() -> !isBusy());
 	}
 
 	private boolean isBusy() {
 		boolean busy;
 		busy = standaloneCommand.getManagerNode().getJobManager().isSlowWorkerBusy();
-		busy |= standaloneCommand.getManager().getDatasetRegistry().getDatasets().stream()
-								 .map(Namespace::getExecutionManager)
-								 .flatMap(e -> e.getExecutionStates().asMap().values().stream())
-								 .map(ExecutionManager.State::getState)
-								 .anyMatch(ExecutionState.RUNNING::equals);
 
-		for (Namespace namespace : standaloneCommand.getManagerNode().getDatasetRegistry().getDatasets()) {
+		busy |= standaloneCommand.getManager().getDatasetRegistry().getNamespaces().stream()
+								 .map(Namespace::getExecutionManager)
+								 .anyMatch(ExecutionManager::hasRunningQueries);
+
+		for (Namespace namespace : standaloneCommand.getManagerNode().getDatasetRegistry().getNamespaces()) {
 			busy |= namespace.getJobManager().isSlowWorkerBusy();
+
+			if (namespace instanceof DistributedNamespace distributedNamespace) {
+				busy |= distributedNamespace.getWorkerHandler().hasPendingMessages();
+			}
 		}
 
 		for (ShardNode shard : standaloneCommand.getShardNodes()) {
@@ -230,27 +236,27 @@ public class TestConquery {
 		// define server
 		dropwizard = new DropwizardTestSupport<>(TestBootstrappingConquery.class, config, app -> {
 			if (config.getSqlConnectorConfig().isEnabled()) {
-				standaloneCommand = new SqlStandaloneCommand((Conquery) app);
+				standaloneCommand = new SqlStandaloneCommand();
 			}
 			else {
-				standaloneCommand = new DistributedStandaloneCommand((Conquery) app);
+				standaloneCommand = new DistributedStandaloneCommand();
 			}
 			return (Command) standaloneCommand;
-		});
+		}
+		);
 		// start server
 		dropwizard.before();
 
 		// create HTTP client for api tests
-		client = new JerseyClientBuilder(this.getDropwizard().getEnvironment())
+		client = new JerseyClientBuilder(getDropwizard().getEnvironment())
 				.withProperty(ClientProperties.CONNECT_TIMEOUT, 10000)
 				.withProperty(ClientProperties.READ_TIMEOUT, 10000)
 				.build("test client");
 
 
-
 		// The test user is recreated after each test, in the storage, but its id stays the same.
 		// Here we register the client filter once for that test user id.
-		UserId testUserId = config.getAuthorizationRealms().getInitialUsers().get(0).createId();
+		UserId testUserId = config.getAuthorizationRealms().getInitialUsers().getFirst().createId();
 		client.register(new ConqueryAuthenticationFilter(() -> getAuthorizationController().getConqueryTokenRealm().createTokenForUser(testUserId)));
 
 		testUser = getMetaStorage().getUser(testUserId);
@@ -277,20 +283,19 @@ public class TestConquery {
 			}
 			openSupports.clear();
 		}
-		this.getStandaloneCommand().getManagerNode().getMetaStorage().clear();
+		getStandaloneCommand().getManagerNode().getMetaStorage().clear();
 		waitUntilWorkDone();
 	}
 
 	@SneakyThrows
 	public void removeSupportDataset(StandaloneSupport support) {
-		standaloneCommand.getManagerNode().getDatasetRegistry().removeNamespace(support.getDataset().getId());
+		standaloneCommand.getManagerNode().getDatasetRegistry().removeNamespace(support.getDataset());
 	}
 
 	public void removeSupport(StandaloneSupport support) {
 		synchronized (openSupports) {
 			openSupports.remove(support);
 			removeSupportDataset(support);
-			waitUntilWorkDone();
 		}
 	}
 
@@ -301,7 +306,7 @@ public class TestConquery {
 
 		// MetaStorage is cleared after each test, so we need to add the test user again
 		final MetaStorage storage = standaloneCommand.getManagerNode().getMetaStorage();
-		testUser = standaloneCommand.getManagerNode().getConfig().getAuthorizationRealms().getInitialUsers().get(0).createOrOverwriteUser(storage);
+		testUser = standaloneCommand.getManagerNode().getConfig().getAuthorizationRealms().getInitialUsers().getFirst().createOrOverwriteUser(storage);
 	}
 
 	public Validator getValidator() {
